--- a/Realm.Search.Demo/Realm.Search.Demo.csproj
+++ b/Realm.Search.Demo/Realm.Search.Demo.csproj
@@ -64,6 +64,7 @@
     <PackageReference Include="Realm" Version="10.20.0" />
     <PackageReference Include="Acr.UserDialogs" Version="8.0.1" Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) != 'windows'" />
     <PackageReference Include="Acr.UserDialogs" Version="7.2.0.564" Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'" />
+    <PackageReference Include="Microsoft.Maui.Controls.Maps" Version="7.0.59" />
   </ItemGroup>
 
   <ItemGroup>
