--- a/Realm.Search.Demo/config.json
+++ b/Realm.Search.Demo/config.json
@@ -1,6 +1,5 @@
 {
   "appId": "<insert-your-app-id>",
   "serverUrl": "https://realm.mongodb.com",
-  "serviceName": "mongodb-atlas",
-  "databaseName": "sample_mflix"
+  "serviceName": "mongodb-atlas"
 }
