--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -69,7 +69,7 @@ jobs:
       id: get-version
       run: |
         cd packages
-        pkgVersion=$(find . -type f -iname "Realm.Fody.*.nupkg" -exec basename {} \; | sed -n 's/Realm.Search.SourceGenerator\.\(.*\)\.nupkg$/\1/p')
+        pkgVersion=$(find . -type f -iname "Realm.Fody.*.nupkg" -exec basename {} \; | sed -n 's/Realm.Search\.\(.*\)\.nupkg$/\1/p')
         echo "version=$pkgVersion" >> $GITHUB_OUTPUT
       shell: bash
 
@@ -77,7 +77,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: Realm.Search.${{ steps.get-version.outputs.version }}
-        path: ${{ github.workspace }}/packages/Realm.Search.${{ steps.get-version.outputs.version }}.*nupkg
+        path: ${{ github.workspace }}\packages\Realm.Search.${{ steps.get-version.outputs.version }}.*nupkg
         retention-days: ${{ github.event_name != 'pull_request' && 30 || 1 }}
         if-no-files-found: error
 
