--- a/Realm.Search.Demo/Realm.Search.Demo.csproj
+++ b/Realm.Search.Demo/Realm.Search.Demo.csproj
@@ -11,6 +11,7 @@
     <SingleProject>true</SingleProject>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <DisableFody>true</DisableFody>
 
     <!-- Display name -->
     <ApplicationTitle>Realm.Search.Demo</ApplicationTitle>
